add todolist reducer + test + useReducer

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
 /*  padding: 30px;*/
 /*  display: flex;*/
 /*}*/
-
+body{
+  background: #424242;
+}
 /*.App > div {*/
 /*  margin-right: 50px;*/
 /*}*/
