--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 /*  display: flex;*/
 /*}*/
 body{
-  background: #424242;
+  background: whitesmoke;
 }
 /*.App > div {*/
 /*  margin-right: 50px;*/
